# ScintillaGL

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md  example.http  example.sql  northwnind.sql
Demo/: CMakeLists.txt  DefaultFontData.cpp  DefaultFontData.h  Demo.cxx  EditorEx.cpp  EditorEx.hpp  ScPlatform.cxx  ShaderEditOverlay.cpp  ShaderEditOverlay.cxx  ShaderEditOverlay.h  ShaderEditOverlay.hpp  editorcomponent.cpp  editorcomponent.hpp  editorlayer.cpp  editorlayer.hpp  filerunnerservice.c.cpp  filerunnerservice.cpp  filerunnerservice.hpp  filerunnerservice.http.cpp  filerunnerservice.mssql.cpp  filerunnerservice.mysql.cpp  filerunnerservice.sqlite.cpp  filesystembrowsercomponent.cpp  filesystembrowsercomponent.hpp  filesystemservice.cpp  filesystemservice.hpp  font-utils.hpp  icomponent.cpp  icomponent.hpp  icon-font.cpp  iscreenlayer.cpp  iscreenlayer.h  iscreenlayer.hpp  localmenuitem.cpp  localmenuitem.hpp  menucomponent.cpp  menucomponent.hpp  menulayer.cpp  menulayer.hpp  openmenuitem.cpp  (+16 more)
httpclient/: CMakeLists.txt  bytearraycontent.cpp  bytearraycontent.hpp  httpclient.cpp  httpclient.hpp  httpcontent.cpp  httpcontent.hpp  httpmessagehandler.cpp  httpmessagehandler.hpp  httpmethod.hpp  httprequestmessage.cpp  httprequestmessage.hpp  httpresponsemessage.cpp  httpresponsemessage.hpp  httpstatuscode.hpp  imemstream.cpp  imemstream.h  jsoncontent.cpp  jsoncontent.hpp  stringcontent.cpp  stringcontent.hpp
scintilla/: CMakeLists.txt  Editor.cxx  Editor.h
sqlite/: CMakeLists.txt
