cmake_minimum_required(VERSION 3.12)

project(scintilla VERSION "0.1.0")

add_library(scintilla)

target_compile_features(scintilla
    PRIVATE
        cxx_nullptr
        cxx_std_11
)

target_include_directories(scintilla
    PUBLIC
        "./"
    PRIVATE
        "${PROJECT_BINARY_DIR}"
        "lexlib"
)

target_link_libraries(scintilla
    PRIVATE
        SDL2-static
        winmm.lib
        opengl32.lib
        imm32.lib
        kernel32.lib
        user32.lib
        gdi32.lib
        winspool.lib
        comdlg32.lib
        advapi32.lib
        shell32.lib
        ole32.lib
        oleaut32.lib
        uuid.lib
        odbc32.lib
)

target_sources(scintilla
    PRIVATE
        "Catalogue.cxx"
        "Catalogue.h"
        "CellBuffer.cxx"
        "CellBuffer.h"
        "CharClassify.cxx"
        "CharClassify.h"
        "ContractionState.cxx"
        "ContractionState.h"
        "Decoration.cxx"
        "Decoration.h"
        "Document.cxx"
        "Document.h"
        "Editor.cxx"
        "Editor.h"
        "FontQuality.h"
        "ILexer.h"
        "Indicator.cxx"
        "Indicator.h"
        "KeyMap.cxx"
        "KeyMap.h"
        "lexers/LexA68k.cxx"
        "lexers/LexAbaqus.cxx"
        "lexers/LexAda.cxx"
        "lexers/LexAPDL.cxx"
        "lexers/LexAsm.cxx"
        "lexers/LexAsn1.cxx"
        "lexers/LexASY.cxx"
        "lexers/LexAU3.cxx"
        "lexers/LexAVE.cxx"
        "lexers/LexAVS.cxx"
        "lexers/LexBaan.cxx"
        "lexers/LexBash.cxx"
        "lexers/LexBasic.cxx"
        "lexers/LexBullant.cxx"
        "lexers/LexCaml.cxx"
        "lexers/LexCLW.cxx"
        "lexers/LexCmake.cxx"
        "lexers/LexCOBOL.cxx"
        "lexers/LexCoffeeScript.cxx"
        "lexers/LexConf.cxx"
        "lexers/LexCPP.cxx"
        "lexers/LexCrontab.cxx"
        "lexers/LexCsound.cxx"
        "lexers/LexCSS.cxx"
        "lexers/LexD.cxx"
        "lexers/LexECL.cxx"
        "lexers/LexEiffel.cxx"
        "lexers/LexErlang.cxx"
        "lexers/LexEScript.cxx"
        "lexers/LexFlagship.cxx"
        "lexers/LexForth.cxx"
        "lexers/LexFortran.cxx"
        "lexers/LexGAP.cxx"
        "lexers/LexGui4Cli.cxx"
        "lexers/LexHaskell.cxx"
        "lexers/LexHTML.cxx"
        "lexers/LexInno.cxx"
        "lexers/LexKix.cxx"
        "lexers/LexLisp.cxx"
        "lexers/LexLout.cxx"
        "lexers/LexLua.cxx"
        "lexers/LexMagik.cxx"
        "lexers/LexMarkdown.cxx"
        "lexers/LexMatlab.cxx"
        "lexers/LexMetapost.cxx"
        "lexers/LexMMIXAL.cxx"
        "lexers/LexModula.cxx"
        "lexers/LexMPT.cxx"
        "lexers/LexMSSQL.cxx"
        "lexers/LexMySQL.cxx"
        "lexers/LexNimrod.cxx"
        "lexers/LexNsis.cxx"
        "lexers/LexOpal.cxx"
        "lexers/LexOthers.cxx"
        "lexers/LexPascal.cxx"
        "lexers/LexPB.cxx"
        "lexers/LexPerl.cxx"
        "lexers/LexPLM.cxx"
        "lexers/LexPOV.cxx"
        "lexers/LexPowerPro.cxx"
        "lexers/LexPowerShell.cxx"
        "lexers/LexProgress.cxx"
        "lexers/LexPS.cxx"
        "lexers/LexPython.cxx"
        "lexers/LexR.cxx"
        "lexers/LexRebol.cxx"
        "lexers/LexRuby.cxx"
        "lexers/LexScriptol.cxx"
        "lexers/LexSmalltalk.cxx"
        "lexers/LexSML.cxx"
        "lexers/LexSorcus.cxx"
        "lexers/LexSpecman.cxx"
        "lexers/LexSpice.cxx"
        "lexers/LexSQL.cxx"
        "lexers/LexTACL.cxx"
        "lexers/LexTADS3.cxx"
        "lexers/LexTAL.cxx"
        "lexers/LexTCL.cxx"
        "lexers/LexTCMD.cxx"
        "lexers/LexTeX.cxx"
        "lexers/LexTxt2tags.cxx"
        "lexers/LexVB.cxx"
        "lexers/LexVerilog.cxx"
        "lexers/LexVHDL.cxx"
        "lexers/LexYAML.cxx"
        "lexlib/Accessor.cxx"
        "lexlib/Accessor.h"
        "lexlib/CharacterSet.cxx"
        "lexlib/CharacterSet.h"
        "lexlib/LexAccessor.h"
        "lexlib/LexerBase.cxx"
        "lexlib/LexerBase.h"
        "lexlib/LexerModule.cxx"
        "lexlib/LexerModule.h"
        "lexlib/LexerNoExceptions.cxx"
        "lexlib/LexerNoExceptions.h"
        "lexlib/LexerSimple.cxx"
        "lexlib/LexerSimple.h"
        "lexlib/OptionSet.h"
        "lexlib/PropSetSimple.cxx"
        "lexlib/PropSetSimple.h"
        "lexlib/SparseState.h"
        "lexlib/StyleContext.cxx"
        "lexlib/StyleContext.h"
        "lexlib/WordList.cxx"
        "lexlib/WordList.h"
        "LineMarker.cxx"
        "LineMarker.h"
        "Partitioning.h"
        "PerLine.cxx"
        "PerLine.h"
        "Platform.h"
        "PositionCache.cxx"
        "PositionCache.h"
        "RESearch.cxx"
        "RESearch.h"
        "RunStyles.cxx"
        "RunStyles.h"
        "SciLexer.h"
        "Scintilla.h"
        "Selection.cxx"
        "Selection.h"
        "SplitVector.h"
        "Style.cxx"
        "Style.h"
        "SVector.h"
        "UniConversion.cxx"
        "UniConversion.h"
        "ViewStyle.cxx"
        "ViewStyle.h"
        "XPM.cxx"
        "XPM.h"
)
